# ask-video

./: .env.example  README.md  pyproject.toml
src/ask_video/: __init__.py  chat.py  cli.py  downloader.py
src/ask_video/formatters/: __init__.py  base.py  youtube.py
