[project]
name = "ask-video"
version = "0.2.0"
description = "A CLI tool to chat with YouTube and Bilibili videos using AI."
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { Repository = "https://github.com/jtsang4/ask-video" }
authors = [{ name = "jtsang4", email = "info@jtsang.me" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "langchain>=1.0.8",
    "langchain-google-genai>=3.1.0",
    "langchain-openai>=1.0.3",
    "langchain-community>=0.0.10",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "yt-dlp>=2025.11.12",
]

[project.scripts]
ask-video = "ask_video:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
